src/sintactico/y.output
   0  $accept : program $end

   1  program : definiciones

   2  definiciones : definiciones definicion
   3               |

   4  definicion : definicionVariable
   5             | definicionFuncion
   6             | definicionEstructura

   7  definicionVariable : "VAR" "IDENT" ':' tipo ';'

   8  definicionEstructura : "STRUCT" "IDENT" '{' definicionesVariablesEstructura '}' ';'

   9  definicionVariablesEstructura : "IDENT" ':' tipo ';'

  10  definicionesVariablesEstructura : definicionesVariablesEstructura definicionVariablesEstructura
  11                                  |

  12  definicionFuncion : "IDENT" '(' listaFunciones ')' retorno '{' definicionesVariables sentencias '}'

  13  listaFunciones : parametros
  14                 |

  15  parametros : parametro
  16             | parametros ',' parametro

  17  parametro : "IDENT" ':' tipo

  18  retorno : ':' tipo
  19          |

  20  definicionesVariables :
  21                        | definicionesVariables definicionVariable

  22  sentencias :
  23             | sentencias sentencia

  24  sentencia : "PRINT" expr ';'
  25            | "PRINTSP" expr ';'
  26            | "READ" expr ';'
  27            | llamarFuncion ';'
  28            | expr '=' expr ';'
  29            | "IF" '(' expr ')' '{' sentencias '}'
  30            | "IF" '(' expr ')' '{' sentencias '}' "ELSE" '{' sentencias '}'
  31            | "WHILE" '(' expr ')' '{' sentencias '}'
  32            | "RETURN" expr ';'
  33            | "RETURN" ';'
  34            | expr "MASMAS" ';'
  35            | "BREAK" ';'
  36            | "SWITCH" '(' expr ')' '{' cases '}'

  37  expr : "LITENT"
  38       | "LITREAL"
  39       | "IDENT"
  40       | "CONSTANTECHAR"
  41       | expr '+' expr
  42       | expr '-' expr
  43       | expr '<' expr
  44       | expr '>' expr
  45       | expr '>' '=' expr
  46       | expr '<' '=' expr
  47       | expr "AND" expr
  48       | expr "OR" expr
  49       | expr '=' expr
  50       | expr '=' '=' expr
  51       | expr '!' '=' expr
  52       | '(' expr ')'
  53       | expr '*' expr
  54       | expr '/' expr
  55       | expr '.' "IDENT"
  56       | expr '[' expr ']'
  57       | llamarFuncion
  58       | "CAST" '<' tipo '>' '(' expr ')'
  59       | "VACIO"
  60       | expr '<' '<' expr '>' '>' expr
  61       | expr '>' '>' expr '<' '<' expr
  62       | expr '?' expr ':' expr

  63  tipo : "INT"
  64       | "CHAR"
  65       | "FLOAT"
  66       | "IDENT"
  67       | '[' "LITENT" ']' tipo

  68  llamarParametros : parametrosLlamada
  69                   |

  70  llamarFuncion : "IDENT" '(' llamarParametros ')'

  71  parametrosLlamada : expr
  72                    | parametrosLlamada ',' expr

  73  cases : case
  74        | cases case

  75  case : "CASE" expr ':' sentencias "BREAK" ';'

state 0
	$accept : . program $end  (0)
	definiciones : .  (3)

	.  reduce 3

	program  goto 1
	definiciones  goto 2


state 1
	$accept : program . $end  (0)

	$end  accept


state 2
	program : definiciones .  (1)
	definiciones : definiciones . definicion  (2)

	"VAR"  shift 3
	"IDENT"  shift 4
	"STRUCT"  shift 5
	$end  reduce 1

	definicion  goto 6
	definicionVariable  goto 7
	definicionFuncion  goto 8
	definicionEstructura  goto 9


state 3
	definicionVariable : "VAR" . "IDENT" ':' tipo ';'  (7)

	"IDENT"  shift 10
	.  error


state 4
	definicionFuncion : "IDENT" . '(' listaFunciones ')' retorno '{' definicionesVariables sentencias '}'  (12)

	'('  shift 11
	.  error


state 5
	definicionEstructura : "STRUCT" . "IDENT" '{' definicionesVariablesEstructura '}' ';'  (8)

	"IDENT"  shift 12
	.  error


state 6
	definiciones : definiciones definicion .  (2)

	.  reduce 2


state 7
	definicion : definicionVariable .  (4)

	.  reduce 4


state 8
	definicion : definicionFuncion .  (5)

	.  reduce 5


state 9
	definicion : definicionEstructura .  (6)

	.  reduce 6


state 10
	definicionVariable : "VAR" "IDENT" . ':' tipo ';'  (7)

	':'  shift 13
	.  error


state 11
	definicionFuncion : "IDENT" '(' . listaFunciones ')' retorno '{' definicionesVariables sentencias '}'  (12)
	listaFunciones : .  (14)

	"IDENT"  shift 14
	')'  reduce 14

	listaFunciones  goto 15
	parametros  goto 16
	parametro  goto 17


state 12
	definicionEstructura : "STRUCT" "IDENT" . '{' definicionesVariablesEstructura '}' ';'  (8)

	'{'  shift 18
	.  error


state 13
	definicionVariable : "VAR" "IDENT" ':' . tipo ';'  (7)

	'['  shift 19
	"IDENT"  shift 20
	"INT"  shift 21
	"CHAR"  shift 22
	"FLOAT"  shift 23
	.  error

	tipo  goto 24


state 14
	parametro : "IDENT" . ':' tipo  (17)

	':'  shift 25
	.  error


state 15
	definicionFuncion : "IDENT" '(' listaFunciones . ')' retorno '{' definicionesVariables sentencias '}'  (12)

	')'  shift 26
	.  error


state 16
	listaFunciones : parametros .  (13)
	parametros : parametros . ',' parametro  (16)

	','  shift 27
	')'  reduce 13


state 17
	parametros : parametro .  (15)

	.  reduce 15


state 18
	definicionEstructura : "STRUCT" "IDENT" '{' . definicionesVariablesEstructura '}' ';'  (8)
	definicionesVariablesEstructura : .  (11)

	.  reduce 11

	definicionesVariablesEstructura  goto 28


state 19
	tipo : '[' . "LITENT" ']' tipo  (67)

	"LITENT"  shift 29
	.  error


state 20
	tipo : "IDENT" .  (66)

	.  reduce 66


state 21
	tipo : "INT" .  (63)

	.  reduce 63


state 22
	tipo : "CHAR" .  (64)

	.  reduce 64


state 23
	tipo : "FLOAT" .  (65)

	.  reduce 65


state 24
	definicionVariable : "VAR" "IDENT" ':' tipo . ';'  (7)

	';'  shift 30
	.  error


state 25
	parametro : "IDENT" ':' . tipo  (17)

	'['  shift 19
	"IDENT"  shift 20
	"INT"  shift 21
	"CHAR"  shift 22
	"FLOAT"  shift 23
	.  error

	tipo  goto 31


state 26
	definicionFuncion : "IDENT" '(' listaFunciones ')' . retorno '{' definicionesVariables sentencias '}'  (12)
	retorno : .  (19)

	':'  shift 32
	'{'  reduce 19

	retorno  goto 33


state 27
	parametros : parametros ',' . parametro  (16)

	"IDENT"  shift 14
	.  error

	parametro  goto 34


state 28
	definicionEstructura : "STRUCT" "IDENT" '{' definicionesVariablesEstructura . '}' ';'  (8)
	definicionesVariablesEstructura : definicionesVariablesEstructura . definicionVariablesEstructura  (10)

	'}'  shift 35
	"IDENT"  shift 36
	.  error

	definicionVariablesEstructura  goto 37


state 29
	tipo : '[' "LITENT" . ']' tipo  (67)

	']'  shift 38
	.  error


state 30
	definicionVariable : "VAR" "IDENT" ':' tipo ';' .  (7)

	.  reduce 7


state 31
	parametro : "IDENT" ':' tipo .  (17)

	.  reduce 17


state 32
	retorno : ':' . tipo  (18)

	'['  shift 19
	"IDENT"  shift 20
	"INT"  shift 21
	"CHAR"  shift 22
	"FLOAT"  shift 23
	.  error

	tipo  goto 39


state 33
	definicionFuncion : "IDENT" '(' listaFunciones ')' retorno . '{' definicionesVariables sentencias '}'  (12)

	'{'  shift 40
	.  error


state 34
	parametros : parametros ',' parametro .  (16)

	.  reduce 16


state 35
	definicionEstructura : "STRUCT" "IDENT" '{' definicionesVariablesEstructura '}' . ';'  (8)

	';'  shift 41
	.  error


state 36
	definicionVariablesEstructura : "IDENT" . ':' tipo ';'  (9)

	':'  shift 42
	.  error


state 37
	definicionesVariablesEstructura : definicionesVariablesEstructura definicionVariablesEstructura .  (10)

	.  reduce 10


state 38
	tipo : '[' "LITENT" ']' . tipo  (67)

	'['  shift 19
	"IDENT"  shift 20
	"INT"  shift 21
	"CHAR"  shift 22
	"FLOAT"  shift 23
	.  error

	tipo  goto 43


state 39
	retorno : ':' tipo .  (18)

	.  reduce 18


state 40
	definicionFuncion : "IDENT" '(' listaFunciones ')' retorno '{' . definicionesVariables sentencias '}'  (12)
	definicionesVariables : .  (20)

	.  reduce 20

	definicionesVariables  goto 44


state 41
	definicionEstructura : "STRUCT" "IDENT" '{' definicionesVariablesEstructura '}' ';' .  (8)

	.  reduce 8


state 42
	definicionVariablesEstructura : "IDENT" ':' . tipo ';'  (9)

	'['  shift 19
	"IDENT"  shift 20
	"INT"  shift 21
	"CHAR"  shift 22
	"FLOAT"  shift 23
	.  error

	tipo  goto 45


state 43
	tipo : '[' "LITENT" ']' tipo .  (67)

	.  reduce 67


state 44
	definicionFuncion : "IDENT" '(' listaFunciones ')' retorno '{' definicionesVariables . sentencias '}'  (12)
	definicionesVariables : definicionesVariables . definicionVariable  (21)
	sentencias : .  (22)

	"VAR"  shift 3
	'('  reduce 22
	'}'  reduce 22
	"IDENT"  reduce 22
	"PRINT"  reduce 22
	"PRINTSP"  reduce 22
	"READ"  reduce 22
	"IF"  reduce 22
	"WHILE"  reduce 22
	"RETURN"  reduce 22
	"BREAK"  reduce 22
	"SWITCH"  reduce 22
	"LITENT"  reduce 22
	"LITREAL"  reduce 22
	"CONSTANTECHAR"  reduce 22
	"CAST"  reduce 22
	"VACIO"  reduce 22

	definicionVariable  goto 46
	sentencias  goto 47


state 45
	definicionVariablesEstructura : "IDENT" ':' tipo . ';'  (9)

	';'  shift 48
	.  error


state 46
	definicionesVariables : definicionesVariables definicionVariable .  (21)

	.  reduce 21


state 47
	definicionFuncion : "IDENT" '(' listaFunciones ')' retorno '{' definicionesVariables sentencias . '}'  (12)
	sentencias : sentencias . sentencia  (23)

	'('  shift 49
	'}'  shift 50
	"IDENT"  shift 51
	"PRINT"  shift 52
	"PRINTSP"  shift 53
	"READ"  shift 54
	"IF"  shift 55
	"WHILE"  shift 56
	"RETURN"  shift 57
	"BREAK"  shift 58
	"SWITCH"  shift 59
	"LITENT"  shift 60
	"LITREAL"  shift 61
	"CONSTANTECHAR"  shift 62
	"CAST"  shift 63
	"VACIO"  shift 64
	.  error

	sentencia  goto 65
	expr  goto 66
	llamarFuncion  goto 67


state 48
	definicionVariablesEstructura : "IDENT" ':' tipo ';' .  (9)

	.  reduce 9


state 49
	expr : '(' . expr ')'  (52)

	'('  shift 49
	"IDENT"  shift 51
	"LITENT"  shift 60
	"LITREAL"  shift 61
	"CONSTANTECHAR"  shift 62
	"CAST"  shift 63
	"VACIO"  shift 64
	.  error

	expr  goto 68
	llamarFuncion  goto 69


state 50
	definicionFuncion : "IDENT" '(' listaFunciones ')' retorno '{' definicionesVariables sentencias '}' .  (12)

	.  reduce 12


state 51
	expr : "IDENT" .  (39)
	llamarFuncion : "IDENT" . '(' llamarParametros ')'  (70)

	'('  shift 70
	'?'  reduce 39
	':'  reduce 39
	"AND"  reduce 39
	"OR"  reduce 39
	'!'  reduce 39
	'='  reduce 39
	'<'  reduce 39
	'>'  reduce 39
	'+'  reduce 39
	'-'  reduce 39
	'*'  reduce 39
	'/'  reduce 39
	"MASMAS"  reduce 39
	'['  reduce 39
	']'  reduce 39
	')'  reduce 39
	'.'  reduce 39
	','  reduce 39
	';'  reduce 39


state 52
	sentencia : "PRINT" . expr ';'  (24)

	'('  shift 49
	"IDENT"  shift 51
	"LITENT"  shift 60
	"LITREAL"  shift 61
	"CONSTANTECHAR"  shift 62
	"CAST"  shift 63
	"VACIO"  shift 64
	.  error

	expr  goto 71
	llamarFuncion  goto 69


state 53
	sentencia : "PRINTSP" . expr ';'  (25)

	'('  shift 49
	"IDENT"  shift 51
	"LITENT"  shift 60
	"LITREAL"  shift 61
	"CONSTANTECHAR"  shift 62
	"CAST"  shift 63
	"VACIO"  shift 64
	.  error

	expr  goto 72
	llamarFuncion  goto 69


state 54
	sentencia : "READ" . expr ';'  (26)

	'('  shift 49
	"IDENT"  shift 51
	"LITENT"  shift 60
	"LITREAL"  shift 61
	"CONSTANTECHAR"  shift 62
	"CAST"  shift 63
	"VACIO"  shift 64
	.  error

	expr  goto 73
	llamarFuncion  goto 69


state 55
	sentencia : "IF" . '(' expr ')' '{' sentencias '}'  (29)
	sentencia : "IF" . '(' expr ')' '{' sentencias '}' "ELSE" '{' sentencias '}'  (30)

	'('  shift 74
	.  error


state 56
	sentencia : "WHILE" . '(' expr ')' '{' sentencias '}'  (31)

	'('  shift 75
	.  error


state 57
	sentencia : "RETURN" . expr ';'  (32)
	sentencia : "RETURN" . ';'  (33)

	'('  shift 49
	"IDENT"  shift 51
	';'  shift 76
	"LITENT"  shift 60
	"LITREAL"  shift 61
	"CONSTANTECHAR"  shift 62
	"CAST"  shift 63
	"VACIO"  shift 64
	.  error

	expr  goto 77
	llamarFuncion  goto 69


state 58
	sentencia : "BREAK" . ';'  (35)

	';'  shift 78
	.  error


state 59
	sentencia : "SWITCH" . '(' expr ')' '{' cases '}'  (36)

	'('  shift 79
	.  error


state 60
	expr : "LITENT" .  (37)

	.  reduce 37


state 61
	expr : "LITREAL" .  (38)

	.  reduce 38


state 62
	expr : "CONSTANTECHAR" .  (40)

	.  reduce 40


state 63
	expr : "CAST" . '<' tipo '>' '(' expr ')'  (58)

	'<'  shift 80
	.  error


state 64
	expr : "VACIO" .  (59)

	.  reduce 59


state 65
	sentencias : sentencias sentencia .  (23)

	.  reduce 23


state 66
	sentencia : expr . '=' expr ';'  (28)
	sentencia : expr . "MASMAS" ';'  (34)
	expr : expr . '+' expr  (41)
	expr : expr . '-' expr  (42)
	expr : expr . '<' expr  (43)
	expr : expr . '>' expr  (44)
	expr : expr . '>' '=' expr  (45)
	expr : expr . '<' '=' expr  (46)
	expr : expr . "AND" expr  (47)
	expr : expr . "OR" expr  (48)
	expr : expr . '=' expr  (49)
	expr : expr . '=' '=' expr  (50)
	expr : expr . '!' '=' expr  (51)
	expr : expr . '*' expr  (53)
	expr : expr . '/' expr  (54)
	expr : expr . '.' "IDENT"  (55)
	expr : expr . '[' expr ']'  (56)
	expr : expr . '<' '<' expr '>' '>' expr  (60)
	expr : expr . '>' '>' expr '<' '<' expr  (61)
	expr : expr . '?' expr ':' expr  (62)

	'?'  shift 81
	"AND"  shift 82
	"OR"  shift 83
	'!'  shift 84
	'='  shift 85
	'<'  shift 86
	'>'  shift 87
	'+'  shift 88
	'-'  shift 89
	'*'  shift 90
	'/'  shift 91
	"MASMAS"  shift 92
	'['  shift 93
	'.'  shift 94
	.  error


state 67
	sentencia : llamarFuncion . ';'  (27)
	expr : llamarFuncion .  (57)

	';'  shift 95
	'?'  reduce 57
	"AND"  reduce 57
	"OR"  reduce 57
	'!'  reduce 57
	'='  reduce 57
	'<'  reduce 57
	'>'  reduce 57
	'+'  reduce 57
	'-'  reduce 57
	'*'  reduce 57
	'/'  reduce 57
	"MASMAS"  reduce 57
	'['  reduce 57
	'.'  reduce 57


state 68
	expr : expr . '+' expr  (41)
	expr : expr . '-' expr  (42)
	expr : expr . '<' expr  (43)
	expr : expr . '>' expr  (44)
	expr : expr . '>' '=' expr  (45)
	expr : expr . '<' '=' expr  (46)
	expr : expr . "AND" expr  (47)
	expr : expr . "OR" expr  (48)
	expr : expr . '=' expr  (49)
	expr : expr . '=' '=' expr  (50)
	expr : expr . '!' '=' expr  (51)
	expr : '(' expr . ')'  (52)
	expr : expr . '*' expr  (53)
	expr : expr . '/' expr  (54)
	expr : expr . '.' "IDENT"  (55)
	expr : expr . '[' expr ']'  (56)
	expr : expr . '<' '<' expr '>' '>' expr  (60)
	expr : expr . '>' '>' expr '<' '<' expr  (61)
	expr : expr . '?' expr ':' expr  (62)

	'?'  shift 81
	"AND"  shift 82
	"OR"  shift 83
	'!'  shift 84
	'='  shift 96
	'<'  shift 86
	'>'  shift 87
	'+'  shift 88
	'-'  shift 89
	'*'  shift 90
	'/'  shift 91
	'['  shift 93
	')'  shift 97
	'.'  shift 94
	.  error


state 69
	expr : llamarFuncion .  (57)

	.  reduce 57


state 70
	llamarFuncion : "IDENT" '(' . llamarParametros ')'  (70)
	llamarParametros : .  (69)

	'('  shift 49
	"IDENT"  shift 51
	"LITENT"  shift 60
	"LITREAL"  shift 61
	"CONSTANTECHAR"  shift 62
	"CAST"  shift 63
	"VACIO"  shift 64
	')'  reduce 69

	expr  goto 98
	llamarFuncion  goto 69
	llamarParametros  goto 99
	parametrosLlamada  goto 100


state 71
	sentencia : "PRINT" expr . ';'  (24)
	expr : expr . '+' expr  (41)
	expr : expr . '-' expr  (42)
	expr : expr . '<' expr  (43)
	expr : expr . '>' expr  (44)
	expr : expr . '>' '=' expr  (45)
	expr : expr . '<' '=' expr  (46)
	expr : expr . "AND" expr  (47)
	expr : expr . "OR" expr  (48)
	expr : expr . '=' expr  (49)
	expr : expr . '=' '=' expr  (50)
	expr : expr . '!' '=' expr  (51)
	expr : expr . '*' expr  (53)
	expr : expr . '/' expr  (54)
	expr : expr . '.' "IDENT"  (55)
	expr : expr . '[' expr ']'  (56)
	expr : expr . '<' '<' expr '>' '>' expr  (60)
	expr : expr . '>' '>' expr '<' '<' expr  (61)
	expr : expr . '?' expr ':' expr  (62)

	'?'  shift 81
	"AND"  shift 82
	"OR"  shift 83
	'!'  shift 84
	'='  shift 96
	'<'  shift 86
	'>'  shift 87
	'+'  shift 88
	'-'  shift 89
	'*'  shift 90
	'/'  shift 91
	'['  shift 93
	'.'  shift 94
	';'  shift 101
	.  error


state 72
	sentencia : "PRINTSP" expr . ';'  (25)
	expr : expr . '+' expr  (41)
	expr : expr . '-' expr  (42)
	expr : expr . '<' expr  (43)
	expr : expr . '>' expr  (44)
	expr : expr . '>' '=' expr  (45)
	expr : expr . '<' '=' expr  (46)
	expr : expr . "AND" expr  (47)
	expr : expr . "OR" expr  (48)
	expr : expr . '=' expr  (49)
	expr : expr . '=' '=' expr  (50)
	expr : expr . '!' '=' expr  (51)
	expr : expr . '*' expr  (53)
	expr : expr . '/' expr  (54)
	expr : expr . '.' "IDENT"  (55)
	expr : expr . '[' expr ']'  (56)
	expr : expr . '<' '<' expr '>' '>' expr  (60)
	expr : expr . '>' '>' expr '<' '<' expr  (61)
	expr : expr . '?' expr ':' expr  (62)

	'?'  shift 81
	"AND"  shift 82
	"OR"  shift 83
	'!'  shift 84
	'='  shift 96
	'<'  shift 86
	'>'  shift 87
	'+'  shift 88
	'-'  shift 89
	'*'  shift 90
	'/'  shift 91
	'['  shift 93
	'.'  shift 94
	';'  shift 102
	.  error


state 73
	sentencia : "READ" expr . ';'  (26)
	expr : expr . '+' expr  (41)
	expr : expr . '-' expr  (42)
	expr : expr . '<' expr  (43)
	expr : expr . '>' expr  (44)
	expr : expr . '>' '=' expr  (45)
	expr : expr . '<' '=' expr  (46)
	expr : expr . "AND" expr  (47)
	expr : expr . "OR" expr  (48)
	expr : expr . '=' expr  (49)
	expr : expr . '=' '=' expr  (50)
	expr : expr . '!' '=' expr  (51)
	expr : expr . '*' expr  (53)
	expr : expr . '/' expr  (54)
	expr : expr . '.' "IDENT"  (55)
	expr : expr . '[' expr ']'  (56)
	expr : expr . '<' '<' expr '>' '>' expr  (60)
	expr : expr . '>' '>' expr '<' '<' expr  (61)
	expr : expr . '?' expr ':' expr  (62)

	'?'  shift 81
	"AND"  shift 82
	"OR"  shift 83
	'!'  shift 84
	'='  shift 96
	'<'  shift 86
	'>'  shift 87
	'+'  shift 88
	'-'  shift 89
	'*'  shift 90
	'/'  shift 91
	'['  shift 93
	'.'  shift 94
	';'  shift 103
	.  error


state 74
	sentencia : "IF" '(' . expr ')' '{' sentencias '}'  (29)
	sentencia : "IF" '(' . expr ')' '{' sentencias '}' "ELSE" '{' sentencias '}'  (30)

	'('  shift 49
	"IDENT"  shift 51
	"LITENT"  shift 60
	"LITREAL"  shift 61
	"CONSTANTECHAR"  shift 62
	"CAST"  shift 63
	"VACIO"  shift 64
	.  error

	expr  goto 104
	llamarFuncion  goto 69


state 75
	sentencia : "WHILE" '(' . expr ')' '{' sentencias '}'  (31)

	'('  shift 49
	"IDENT"  shift 51
	"LITENT"  shift 60
	"LITREAL"  shift 61
	"CONSTANTECHAR"  shift 62
	"CAST"  shift 63
	"VACIO"  shift 64
	.  error

	expr  goto 105
	llamarFuncion  goto 69


state 76
	sentencia : "RETURN" ';' .  (33)

	.  reduce 33


state 77
	sentencia : "RETURN" expr . ';'  (32)
	expr : expr . '+' expr  (41)
	expr : expr . '-' expr  (42)
	expr : expr . '<' expr  (43)
	expr : expr . '>' expr  (44)
	expr : expr . '>' '=' expr  (45)
	expr : expr . '<' '=' expr  (46)
	expr : expr . "AND" expr  (47)
	expr : expr . "OR" expr  (48)
	expr : expr . '=' expr  (49)
	expr : expr . '=' '=' expr  (50)
	expr : expr . '!' '=' expr  (51)
	expr : expr . '*' expr  (53)
	expr : expr . '/' expr  (54)
	expr : expr . '.' "IDENT"  (55)
	expr : expr . '[' expr ']'  (56)
	expr : expr . '<' '<' expr '>' '>' expr  (60)
	expr : expr . '>' '>' expr '<' '<' expr  (61)
	expr : expr . '?' expr ':' expr  (62)

	'?'  shift 81
	"AND"  shift 82
	"OR"  shift 83
	'!'  shift 84
	'='  shift 96
	'<'  shift 86
	'>'  shift 87
	'+'  shift 88
	'-'  shift 89
	'*'  shift 90
	'/'  shift 91
	'['  shift 93
	'.'  shift 94
	';'  shift 106
	.  error


state 78
	sentencia : "BREAK" ';' .  (35)

	.  reduce 35


state 79
	sentencia : "SWITCH" '(' . expr ')' '{' cases '}'  (36)

	'('  shift 49
	"IDENT"  shift 51
	"LITENT"  shift 60
	"LITREAL"  shift 61
	"CONSTANTECHAR"  shift 62
	"CAST"  shift 63
	"VACIO"  shift 64
	.  error

	expr  goto 107
	llamarFuncion  goto 69


state 80
	expr : "CAST" '<' . tipo '>' '(' expr ')'  (58)

	'['  shift 19
	"IDENT"  shift 20
	"INT"  shift 21
	"CHAR"  shift 22
	"FLOAT"  shift 23
	.  error

	tipo  goto 108


state 81
	expr : expr '?' . expr ':' expr  (62)
